Started implements of Seq2Seq

--- a/LSTM_implement/LSTM_implement.ipynb
+++ b/LSTM_implement/LSTM_implement.ipynb
@@ -12,6 +12,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://nn.labml.ai/lstm/index.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
